# YuePi0

./: .gitignore  README.md  pyproject.toml
config/: bridge_statistics.json  deploy_simpler.yaml  fakedataTrain.yaml  realdataTrain.yaml  yuepi0.yaml
doc/: gqa_notes.md  rmsnorm_notes.md
docs/: bridge_dataset_notes.md  dispatcher_notes.md  flow_matching_and_sinusoidal_notes.md  gemma_notes.md  joint_model_notes.md  kv_cache_notes.md  mixture_notes.md  paligemma_embedder_notes.md  paligemma_weight_loading_notes.md  parity_test_notes.md  phase1_paligemma_bf16_training_notes.md  pizero_inference_and_adaln_notes.md  processing_notes.md  rmsnorm_notes.md  rope_notes.md  vit_siglip_notes.md
scripts/: count_all_params.py  count_mot_params.py  deploy_simpler.py  download_bridge_sample.py  eval_bridge.py  inspect_bridge.py  inspect_paligemma_keys.py  inspect_pizero_keys.py  load_paligemma.py  parity_A_reference.py  parity_B_compare.py  parity_joint_A.py  parity_joint_B.py  run_deploy.sh  test_paligemma_loaded.py
src/agent/: fakedata_train.py  train.py
src/agent/env_adapter/: base.py  simpler.py
src/data/: bridge_dataset.py  fake_dataset.py
src/model/: load_pretrained.py  utils.py
src/model/paligemma/: gemma.py  modules.py  vit.py
src/model/vla/: MyRMSNorm.py  grouped_query_attention.py  joint_model.py  kvcache.py  mixture.py  modules.py  processing.py  rope.py  yuepi0.py
src/utils/: geometry.py  optim.py
tests/model/: test_kvcache.py  test_paligemma_loaded.py
tests/model/paligemma/: test_gemma.py  test_gemma_allclose.py  test_kvcache.py  test_modules.py  test_vit.py
tests/model/vla/: joint_model.py  test_joint_model.py  test_kvcache.py  test_mixture.py  test_modules.py  test_pizero.py
